syntax = "proto3";

package io.harness.delegateprofile;

option java_multiple_files = true;

import "io/harness/delegate/account.proto";
import "io/harness/delegateprofile/delegate_profile.proto";

service DelegateProfileService {
  rpc ListProfiles(ListProfilesRequest) returns (ListProfilesResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc AddProfile(AddProfileRequest) returns (AddProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);

  rpc UpdateProfileScopingRules(UpdateProfileScopingRulesRequest) returns (UpdateProfileScopingRulesResponse);

  rpc UpdateProfileSelectors(UpdateProfileSelectorsRequest) returns (UpdateProfileSelectorsResponse);
}

message ListProfilesRequest {
  delegate.AccountId account_id = 1;
}

message ListProfilesResponse {
  repeated DelegateProfileGrpc profiles = 1;
}

message GetProfileRequest {
  delegate.AccountId account_id = 1;
  ProfileId profile_id = 2;
}

message GetProfileResponse {
  DelegateProfileGrpc profile = 1;
}

message AddProfileRequest {
  DelegateProfileGrpc profile = 1;
}

message AddProfileResponse {
  DelegateProfileGrpc profile = 1;
}

message UpdateProfileRequest {
  DelegateProfileGrpc profile = 1;
}

message UpdateProfileResponse {
  DelegateProfileGrpc profile = 1;
}

message DeleteProfileRequest {
  delegate.AccountId account_id = 1;
  ProfileId profile_id = 2;
}

message DeleteProfileResponse {
}

message UpdateProfileScopingRulesRequest {
  delegate.AccountId account_id = 1;
  ProfileId profile_id = 2;
  repeated ProfileScopingRule scoping_rules = 3;
}

message UpdateProfileScopingRulesResponse {
}

message UpdateProfileSelectorsRequest {
  delegate.AccountId account_id = 1;
  ProfileId profile_id = 2;
  repeated ProfileSelector selectors = 3;
}

message UpdateProfileSelectorsResponse {
}
